minor fix css not align problem

--- a/src/public/sass/components/_content.scss
+++ b/src/public/sass/components/_content.scss
@@ -17,6 +17,8 @@
 
     .main {
 
+      padding-top: 20px;
+
       .post {
 
         h1 {
